src/test/ui/privacy/legacy-ctor-visibility.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct `S`
  --> $DIR/legacy-ctor-visibility.rs:9:13
   |
LL |             S(10);
   |             ^

error: aborting due to previous error

For more information about this error, try `dustc --explain E0423`.
